<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".PPF_CalculatorActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#58B0E4"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">


        <ImageView
            android:layout_width="55dp"
            android:layout_height="20dp"

            android:layout_marginTop="20dp"
            android:src="@drawable/back" />


        <TextView
            android:layout_width="273dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/ppf_calculator"
            android:textSize="30sp"
            android:textStyle="bold"/>
    </LinearLayout>



    <LinearLayout
        android:id="@+id/input_layout_principal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"

            android:layout_marginHorizontal="15dp"
            android:text="@string/ppf_principle"
            android:textSize="20sp"
            android:textStyle="bold"/>


        <EditText
            android:id="@+id/principal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"

            android:digits="0123456789."
            android:hint="@string/ppf_princi"
            android:inputType="number"
            android:singleLine="true" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/input_layout_interest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="20dp"

            android:text="@string/ppf_interest"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/interest"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:digits="0123456789."
            android:hint="@string/ppf_interest"
            android:inputType="number"
            android:singleLine="true" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/input_layout_tenure"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="20dp"

            android:text="@string/ppf_loan"
            android:textSize="20sp"
            android:textStyle="bold"/>
        <EditText
            android:id="@+id/years"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:digits="0123456789."
            android:hint="@string/hint_months"
            android:inputType="number" />
    </LinearLayout>

    <LinearLayout

        android:layout_width="398dp"
        android:layout_height="99dp">


        <Button
            android:id="@+id/btn_calculate2"
            android:layout_width="233dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"

            android:layout_marginTop="40dp"
          android:background="@drawable/button"
            android:text="@string/emi_button1"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btn_calculate1"
            android:layout_width="128dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="40dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/button"
            android:text="@string/emi_button2"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

    </LinearLayout>
    <LinearLayout
        android:id="@+id/input_layout_emi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="348dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:text="@string/rd_emi"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/maturity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:hint="@string/rd_hint"
            android:inputType="number"
            android:maxEms="0" />
    </LinearLayout>



</LinearLayout>