<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#58B0E4"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:text="@string/app_calculator"
            android:textSize="35sp"
            android:textStyle="bold" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="101dp"

        android:orientation="horizontal"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingRight="20dp">

        <TextView
            android:layout_width="234dp"
            android:layout_height="wrap_content"
            android:text="@string/app_EMI"
            android:textSize="30sp"
            android:textStyle="bold"/>

        <ImageView
            android:layout_width="80dp"
            android:layout_height="75dp"

            android:layout_gravity="end"
            android:layout_margin="10dp"
            android:src="@drawable/calcu" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/emi_cal"
        android:layout_margin="10dp"
        android:textSize="30dp"
        android:textStyle="bold"/>


    <LinearLayout
        android:layout_width="400dp"
        android:layout_height="87dp"
        android:orientation="horizontal">


        <ImageView
            android:id="@+id/imgemi"
            android:layout_width="90dp"
            android:layout_height="55dp"
            android:layout_margin="20dp"
            android:src="@drawable/calcu3" />

        <ImageView
            android:id="@+id/imgloan"
            android:layout_width="90dp"
            android:layout_height="55dp"
            android:layout_margin="20dp"
            android:src="@drawable/calcu6" />


        <ImageView
            android:id="@+id/imgvehicle"
            android:layout_width="90dp"
            android:layout_height="55dp"
            android:layout_margin="20dp"
            android:src="@drawable/car" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="73dp"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/txtEMI"
            android:layout_width="95dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="35dp"
            android:text="@string/h_emi"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/txtloan"
            android:layout_width="108dp"
            android:layout_height="58dp"
            android:layout_marginLeft="30dp"
            android:text="@string/h_loan"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/txtvehicle"
            android:layout_width="88dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:text="@string/loan_car"
            android:textSize="20dp" />


    </LinearLayout>

    <TextView
        android:layout_width="381dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/finance_cal"
        android:textSize="30sp"
        android:textStyle="bold" />


    <LinearLayout
        android:layout_width="400dp"
        android:layout_height="95dp"
        android:orientation="horizontal">


        <ImageView
            android:id="@+id/imgfd"
            android:layout_width="90dp"
            android:layout_height="55dp"

            android:layout_margin="20dp"
            android:src="@drawable/calcu2" />

        <ImageView
            android:id="@+id/imgrd"
            android:layout_width="71dp"
            android:layout_height="54dp"

            android:layout_margin="25dp"
            android:src="@drawable/calcu2" />


        <ImageView
            android:id="@+id/imgppf"
            android:layout_width="89dp"
            android:layout_height="56dp"

            android:layout_margin="20dp"
            android:src="@drawable/calcu2" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="890dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/txtfd"
            android:layout_width="95dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="35dp"
            android:text="@string/fd_cal"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/txtrd"
            android:layout_width="93dp"
            android:layout_height="56dp"
            android:layout_marginLeft="30dp"
            android:text="@string/rd_cal"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/txtppf"
            android:layout_width="100dp"
            android:layout_height="68dp"
            android:layout_marginLeft="30dp"
            android:text="@string/ppf_cal"

            android:textSize="20sp" />



    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <ImageView
            android:layout_width="80dp"
            android:layout_height="56dp"
            android:id="@+id/imgsip"

            android:layout_margin="20dp"
            android:src="@drawable/sip" />

        <TextView
            android:id="@+id/txtsip"
            android:layout_width="95dp"
            android:layout_height="64dp"
            android:layout_marginLeft="35dp"
            android:text="@string/sip"
            android:textSize="20sp" />








    </LinearLayout>
    </LinearLayout>



